--- a/Web/index.html
+++ b/Web/index.html
@@ -4,7 +4,7 @@
         <title>Fish Programing</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="libcss.css">
-        <link rel="shortcut icon" href="Assets\\favicon.ico"/>
+        <link rel="shortcut icon" href="favicon.ico"/>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
