--- a/Web/index.html
+++ b/Web/index.html
@@ -28,7 +28,7 @@
                 width: 100%;
                 height: 100px;
                 position: relative;
-                background-image: url('C:\\Users\\HP\\Pictures\\Saved Pictures\\1051443.jpg');
+                background-image: url('Assets/1051443.jpg');
             }
 
             .header div{
