--- a/Web/index.html
+++ b/Web/index.html
@@ -27,13 +27,13 @@
             </div>
         </div>
 
-        <div class="middle" style="font-family: 'Texturina', serif;">
+        <div class="middle" style="font-family: 'Texturina', serif; height:2100px;">
             <div class="menu---content">
                 <div class="menu___child---content" >
                     <h2>Thư viện về Cấu trúc dữ liệu</h2>
                     <ul>
-                        <li><a href="#">Lời nói đầu</a></li>
-                        <li><a href="#">Mảng động</a></li>
+                        <li><a href="#loinoidau">Lời nói đầu</a></li>
+                        <li><a href="mangmotchieu.html">Mảng động</a></li>
                         <li><a href="#">Danh sách liên kết đôi</a></li>
                         <li><a href="#">Ngăn xếp</a></li>
                         <li><a href="#">Hàng đợi</a></li>
@@ -47,7 +47,7 @@
             </div>
 
             <div class="detail">
-                <h1>Lời nói đầu</h1>
+                <h1 id="loinoidau">Lời nói đầu</h1>
                 <h3 style="width:90px; border-left:2px solid black; padding-left:10px; background:rgb(159, 162, 153);">Mục lục</h3>
                 <ul id="tableOfContents" style="padding-left:20px;">
                     <li><a href="#gioithieu">Giới thiệu</a></li>
