--- a/Bird Document/index.html
+++ b/Bird Document/index.html
@@ -139,7 +139,7 @@
                 <div class="menu___child---content" >
                     <h2>Học tập</h2>
                     <ul>
-                        <li><a href="index.html">Document</a></li>
+                        <li><a href="document-arraylist.html">Document</a></li>
                     </ul>
                 </div>
             </div>
