--- a/Bird Document/document-arraylist.html
+++ b/Bird Document/document-arraylist.html
@@ -154,7 +154,7 @@
                     <h2>Array List</h2>
                     <ul>
                         <li><a href="#">Structure</a></li>
-                        <li><a href="#">Complexity</a></li>
+                        <li><a href="document-arraylist.html">Complexity</a></li>
                     </ul>
                 </div>
             </div>
