--- a/DSA Document/index.html
+++ b/DSA Document/index.html
@@ -30,11 +30,17 @@
         <div class="tab" style="width:50%;">
           <p style="font-size:40px; color:rgb(156, 213, 1);">Documentation : DSACPP</p>
 
-          <div class="card" style="background-color:rgb(72, 7, 110);">
-            <p style="font-size:30px; color:rgb(53, 175, 212);">Tuple</p>
-            <p style="color:white;">Tuple is a class that is defined by the preprocessor before it is compiled.<br>
-              The more tuple types declared, the larger the program source code.<br>
-              Search with keyword : Variadic Templates.</p>
+          <div class="card" style="background-image: linear-gradient(to bottom, rgb(99, 11, 150), rgb(72, 7, 110));">
+              <span style="margin:auto 0; font-size:30px; color:rgb(53, 175, 212);">Tuple</span>
+
+              <img class="button-show" src="Picture/flicker.png" style="width:30px; height:30px;"><br>
+              <div class="box-show">
+                <p style="color:white;">Return multiple values.<br>
+                  Assign multiple values ​​to multiple variables.<br>
+                  Alternative to struct.<br>
+                  The more tuple types declared, the larger the program source code.<br>
+                  Search with keyword : <i>Variadic Templates.</i></p>
+              </div>
           </div>
         </div>
 
@@ -56,5 +62,6 @@
 
     <script src="JS/script.js"></script>
     <script src="JS/MusicPlayer.js"></script>
+    <script src="JS/BoxPlayer.js"></script>
   </body>
 </html>
