--- a/DSA Document/index.html
+++ b/DSA Document/index.html
@@ -44,7 +44,7 @@
           </div>
 
           <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(105, 86, 117), rgb(91, 57, 111));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(0, 239, 195);">Array List</span>
+            <span style="margin:auto 0; font-size:30px; color:rgb(222, 117, 236);">Array List</span>
 
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
             <div class="box-show hidden">
@@ -61,6 +61,20 @@
           <span class="char btnchar back-page">[Back]</span> <a class="char btnchar" href="https://github.com/Ca-Len-Men/DataStructure/blob/Object/tuple.h" target="_blank">[Source]</a>
 
           <div class="card" style="background-color:#2d2d30;">
+            <span style="margin:auto 0; font-size:25px; color:rgb(53, 175, 212);">Declare and use</span>
+
+            <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
+            <div class="box-show hidden char">
+              <span class="struct">tupe</span> &lt;<span class="old-type">int</span>, <span class="old-type">char</span>, <span class="struct">std::string</span>&gt; <span class="name">tup</span>
+              (5, <span class="str">'c'</span>, <span class="str">"World"</span>)<br>
+              <span class="struct">std::cout</span> &lt;&lt; <span class="name">tup</span>;&emsp;<span class="cmt">// (5, c, World)</span><br>
+              <span class="struct">std::cout</span> &lt;&lt; <span class="func">get</span>&lt;1&gt;(<span class="name">tup</span>);&emsp;<span class="cmt">// c</span>
+              <span class="struct">std::cout</span> &lt;&lt; <span class="name">tup</span>.<span class="func">len</span>();&emsp;<span class="cmt">// 3</span>
+              <p style="color:white;">Cannot change the value of elements inside the tuple.</p>
+            </div>
+          </div>
+
+          <div class="card" style="background-color:#2d2d30;">
               <span style="margin:auto 0; font-size:25px; color:rgb(53, 175, 212);">Return multiple values</span>
 
               <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
@@ -69,6 +83,7 @@
                 <span class="old-type">int</span> y1, <span class="old-type">int</span> x2, <span class="old-type">int</span> y2) {<br>
                   &emsp;<span class="return">return</span> <span class="struct">tuple</span>&lt;<span class="old-type">int</span>, <span class="old-type">int</span>&gt;(x1 + x2, y1 + y2);<br>
                 }</span>
+                <p style="color:white;">Return a tuple containing different values.</p>
               </div>
           </div>
 
@@ -81,6 +96,7 @@
               <span class="struct">tuple</span>&lt;<span class="old-type">int</span>, <span class="old-type">int</span>
               &gt;(1, 5).<span class="func">convert</span>(<span class="name">x</span>
               , <span class="name">y</span>);
+              <p style="color:white;">Use the 'convert' method to assign values to multiple variables, the number of variables equal to the number of elements in the tuple.</p>
             </div>
           </div>
 
@@ -94,6 +110,21 @@
               , <span class="old-type">int</span>, <span class="old-type">int</span>&gt;(<span class="name">a</span>, <span class="name">b</span>, <span class="name">c</span>).</span>
               <span class="func">convert</span>(<span class="name">a</span>, <span class="name">b</span>, <span class="name">c</span>)<br>
               <span class="cmt">// a = 5, b = 2, c = 3</span>
+              <p style="color:white;">Use the 'convert' method to swap in any order.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="tab page hidden" style="width:50%;">
+          <p style="font-size:40px; color:rgb(80, 220, 176);">Documentation : Array List</p>
+          <span class="char btnchar back-page">[Back]</span> <a class="char btnchar" href="#" target="_blank">[Source]</a>
+
+          <div class="card" style="background-color:#2d2d30;">
+            <span style="margin:auto 0; font-size:25px; color:rgb(53, 175, 212);">Declare and use</span>
+
+            <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
+            <div class="box-show hidden char">
+              <p style="color:white;">Updating ...</p>
             </div>
           </div>
         </div>
