--- a/DSA Document/index.html
+++ b/DSA Document/index.html
@@ -7,6 +7,7 @@
     <title>DSACPP</title>
     <link rel="stylesheet" href="CSS/design.css">
     <link rel="stylesheet" href="CSS/color.css">
+    <link rel="shortcut icon" type="image/png" href="C++.png"/>
   </head>
 
   <body>
